--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
-body{
-    font-family: 'Kosugi Maru', sans-serif; 
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');body{
+    font-family: 'Fredericka the Great', cursive;
     background-color: black;
     background-image:url(../images/conflicted.gif);
     background-size:cover;
@@ -8,24 +7,42 @@ body{
 }
 
 #main-container{
-    height: 100px;
+    border-radius: 5px;
+    height: 500px;
     background-color: lightgray;
     width: 90%;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 30% 70%;
+    opacity: 90%;
 
 }
 .content{
-
+    margin: 5px;
+    border-radius: 5px;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+.content:nth-child(2n){
+    animation: danimation1 1s infinite;
+    margin: 10px;
 }
 #navigation{
     padding: 20px;
+    
 }
 
+@keyframes danimation1 {
+    from{background-color: gray;)}
+    to {background-color:black;)}
+}
+
+
 .nav-functions{
-    transform: rotate(20 deg);
-    padding: 5px;
+    border-left: 2px solid white;
+    border-right: 2px solid white;
+    border-radius: 5px;
+    padding: 15px;
     text-align: center;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
@@ -33,20 +50,22 @@ body{
 
 .nav-functions :hover{
 background-color: rgb(175, 27, 93);
+animation: danimation1 2s infinite;
 
 }
 
 #first-title {
-    background-color: rgb(59, 88, 205);
+    color: white;
+    border-top: 3px solid white;
     border-radius: 5px;
     padding: 10px;
     text-align: center;
     margin: 10px auto;
     width: 90%;
-    opacity: 80%;
     
 }
 #article-container{
+    
     width: 90%;
     margin: 0 auto;
     margin: 50px auto;
