--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,7 +14,7 @@ h3{
 #main-container{
     border-radius: 5px;
     height: 500px;
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -24,10 +24,10 @@ h3{
 }
 #left-container{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 20% 80%;
 }
 .content{
-    height: 50%;
+    height: 70%;
     margin: 3px;
     border-radius: 3px;
     padding: 5px;
