--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,14 +6,18 @@ body{
     background-size:cover;
     background-attachment: fixed;
 }
-
+h1{
+    font-size: 40pt;
+}
 h3{
     background-color: lightgray;
 }
 
 #main-container{
-    border-radius: 5px;
-    height: 500px;
+    border-left: 5px solid white;
+    border-right: 5px solid white;
+    border-radius: 15px;
+    height: 100%;
     width: 80%;
     margin: 0 auto;
     display: grid;
@@ -32,6 +36,10 @@ h3{
     border-radius: 3px;
     padding: 5px;
 }
+.content:nth-child(2n+1){
+    writing-mode: vertical-rl;
+}
+
 .content:nth-child(3n+1){
     animation: danimation3 2s infinite;
     
@@ -47,7 +55,7 @@ h3{
 
 #navigation{
     padding: 20px;
-    
+    background-position: sticky;
 }
 
 @keyframes danimation1 {
@@ -71,6 +79,7 @@ h3{
     padding: 15px;
     text-align: center;
     display: grid;
+    font-size: 18pt;
     grid-template-columns: auto auto auto auto auto;
 }
 
@@ -86,14 +95,14 @@ h3{
     text-align: center;
     margin: 10px auto;
     width: 90%;
-    
+    font-size: 16pt;
 }
 #article-container{
     border-radius: 5px;
     background-color: white;
     width: 90%;
     margin: 0 auto;
-    height: 100%;
+    height: 95%;
 }
 
 .first-article{
@@ -103,4 +112,12 @@ h3{
     background-color: rgb(175, 27, 93);
     opacity: 85%;
     color: black;
+}
+#bottom-container{
+    height: 300px;
+    background-color: lightgrey;
+    margin: 30px auto;
+    width: 85%;
+    border-radius: 5px;
+    opacity: 90%;
 }
