--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -55,7 +55,7 @@ h3{
 
 #navigation{
     padding: 20px;
-    background-position: sticky;
+    position: sticky;
 }
 
 @keyframes danimation1 {
@@ -120,4 +120,12 @@ h3{
     width: 85%;
     border-radius: 5px;
     opacity: 90%;
+}
+
+#blog-container{
+    margin: 0 auto;
+    background-color: white;
+    height: 100%;
+    width: 90%;
+    position:;
 }
