--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -114,18 +114,21 @@ h3{
     color: black;
 }
 #bottom-container{
-    height: 300px;
-    background-color: lightgrey;
+    height: 100%;
+    background-color: rgb(43, 107, 186);
     margin: 30px auto;
-    width: 85%;
+    width: 80%;
     border-radius: 5px;
     opacity: 90%;
+}
+.form-section{
+    padding: 20px;
+    border-radius: 10px; 
 }
 
 #blog-container{
     margin: 0 auto;
     background-color: white;
     height: 100%;
-    width: 90%;
-    position:;
+    width: 50%;
 }
