--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,13 +29,19 @@ h3{
 #left-container{
     display: grid;
     grid-template-columns: 20% 80%;
+    transition: ease-in-out 2s;
+}
+#left-container:hover{
+    transition: ease-in-out 2s;
+    
 }
 .content{
-    height: 200px;
+    height: 220px;
     margin: 3px;
     border-radius: 3px;
     padding: 5px;
 }
+
 .content:nth-child(2n+1){
     writing-mode: vertical-rl;
     width: 50%;
