--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -10,7 +10,7 @@ h1{
     font-size: 40pt;
 }
 h3{
-    background-color: lightgray;
+    background-color: white;
 }
 
 #main-container{
@@ -29,12 +29,8 @@ h3{
 #left-container{
     display: grid;
     grid-template-columns: 20% 80%;
-    transition: ease-in-out 1s;
 }
-#left-container:hover{
-    
-    
-}
+
 .content{
     height: 220px;
     margin: 3px;
@@ -110,10 +106,10 @@ padding: 20px;
 }
 #article-container{
     border-radius: 5px;
-    background-color: white;
+    background-color: gray;
     width: 90%;
     margin: 0 auto;
-    height: 95%;
+    height: 100%;
 }
 
 .first-article{
@@ -128,7 +124,7 @@ padding: 20px;
     height: 100%;
     background-color: rgb(43, 107, 186);
     margin: 30px auto;
-    width: 60%;
+    width: 50%;
     border-radius: 5px;
     opacity: 90%;
 }
